--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "drizzle-seed": "^0.3.1",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
@@ -37,7 +37,8 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.4",
-    "drizzle-kit": "^0.30.4",
+    "drizzle-kit": "^0.18.1",
+    "esbuild": "^0.25.4",
     "nodemon": "^3.1.7",
     "ts-node": "^10.4.0",
     "tsx": "^4.19.3",
